2004-07-26  Karl Runge <runge@karlrunge.com>
	* x11vnc: first pass at doing modtweak via XKEYBOARD extension (-xkb)
	* -skip_keycodes; reset modtweaks on event MappingNotify.
	* fix bugs wrt PRIMARY handling.
	* continuation lines "\" in x11vncrc.  

2004-07-15  Karl Runge <runge@karlrunge.com>
	* x11vnc: modtweak is now the default
	* check X11/XKBlib.h in configure.ac to work around Solaris 7 bug.

2004-07-10  Karl Runge <runge@karlrunge.com>
	* x11vnc: norepeat to turn off X server autorepeat when clients exist,
	  let the client side do the autorepeating.

2004-06-26  Karl Runge <runge@karlrunge.com>
	* x11vnc: add "-scale fraction" for global server-side scaling.

2004-06-17  Karl Runge <runge@karlrunge.com>
	* x11vnc: simple ~/.x11vncrc config file support, -rc, -norc

2004-06-12  Karl Runge <runge@karlrunge.com>
	* x11vnc: -clear_mods, -clear_keys, and -storepasswd,
	* add RFB_SERVER_IP RFB_SERVER_PORT to -accept env.

2004-06-07  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* libvncserver/cursor.c, rfb/rfb.h: fix cursor trails
	* */Makefile.am: stop automake nagging
	* libvncclient/*, client_examples/*: streamline API, SDLvncviewer added
	* examples/, libvncclient/, test/: moved tests to test/

2004-06-05  Karl Runge <runge@karlrunge.com>
	* x11vnc: rearrange file for easier maintenance
	* add RFB_CLIENT_COUNT to -accept and -gone commands

2004-05-27  Karl Runge <runge@karlrunge.com>
	* x11vnc: -viewpasswd, viewonly passwds.
	* some typos in prepare_x11vnc_dist.sh 
	* libvncserver: fix view-only plain passwd and view-only CutText 

2004-05-25  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* moved the library into libvncserver/
	* moved x11vnc into x11vnc/

2004-05-21  Karl Runge <runge@karlrunge.com>
	* x11vnc: -gone, -passwdfile, -o logfile; add view-only to -accept

2004-05-08  Karl Runge <runge@karlrunge.com>
	* x11vnc: add -accept some-command/xmessage/popup

2004-05-05  Karl Runge <runge@karlrunge.com>